--- a/assets/styles/_font.scss
+++ b/assets/styles/_font.scss
@@ -5,3 +5,9 @@
     font-style: normal;
     src: url("~assets/fonts/Product-Sans/Product Sans Regular.ttf") format('truetype');
 }
+@font-face {
+    font-family: 'ProductSans';
+    font-weight: bold;
+    font-style: normal;
+    src: url("~assets/fonts/Product-Sans/Product Sans Bold.ttf") format('truetype');
+}
