--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -6,6 +6,7 @@
 }
 
 html, body, #__nuxt, #__layout, main {
+  min-width: 1240px;
   min-height: 100vh !important;
   font-size: 16px; //root font-size
 }
