--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,12 +1,12 @@
 @import "./normalize.css"; // normalize css for cross-browser integrations
 @import "font"; //applications font-face
+@import "breakpoints";
 
 * {
   box-sizing: border-box;
 }
 
 html, body, #__nuxt, #__layout, main {
-  min-width: 1240px;
   min-height: 100vh !important;
   font-size: 16px; //root font-size
 }
