--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -42,3 +42,11 @@ input {
 .vd-2 {
   height: 2rem;
 }
+
+.error-container {
+  padding: 1rem;
+  border-radius: .5rem;
+  background-color: #191c1e;
+  border: 1px solid #263238;
+  color: #e6e6e6;
+}
